--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 .column {
   float: left;
   width: 20%;
+  margin: 1.25%;
+  border-color: black;
+  border-width: 1.25%;
+  border-style: dashed;
+}
+.column img {
+  max-width: 100%;
+  border-radius: 50%;
 }
