--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,25 @@
+body {
+  background-color:#cccccc;
+  color:green;
+  text-align:center;
+}
 .column {
   float: left;
   width: 20%;
   margin: 1.25%;
+  padding: .5%;
   border-color: black;
   border-width: 1.25%;
   border-style: dashed;
 }
+.column p a {
+  color: salmon;
+}
 .column img {
   max-width: 100%;
   border-radius: 50%;
+}
+.column h3{
+  color: red;
+  font-style: italic;
 }
